Bug 416629 - Error message when I click on "Save as" button twice: "path/to/file/file.png is a file, but a folder was expected"
Summary: Error message when I click on "Save as" button twice: "path/to/file/file.png ...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-23 02:49 UTC by Patrick Silva
Modified: 2020-01-23 09:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (297.63 KB, image/png)
2020-01-23 02:49 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-01-23 02:49:28 UTC
Created attachment 125313 [details]
screenshot

STEPS TO REPRODUCE
1. open spectacle by pressing ptintscreen key
2. make sure "Quit after manual save or copy" is unchecked
3. save the screenshot clicking on "Save as" button
4. click on "Save as" button again

OBSERVED RESULT
the error message shown in the attached screenshot appears

EXPECTED RESULT
no error message

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.67.0
Qt Version: 5.13.2


ADDITIONAL INFORMATION
cannot reproduce with Spectacle 19.12.1 on Arch Linux
Comment 1 David Redondo 2020-01-23 09:29:05 UTC
Git commit 0cb5e7499c5f0bde2ab2ea32a3004a5cfe6d21ac by David Redondo.
Committed on 23/01/2020 at 09:26.
Pushed by davidre into branch 'master'.

Pass only the path to the file dialog

lastSave(As)Location includes the filename. Remove it before passing the URL to
the QFileDialog.

M  +1    -1    src/ExportManager.cpp

https://commits.kde.org/spectacle/0cb5e7499c5f0bde2ab2ea32a3004a5cfe6d21ac