Pass only the path to the file dialog

lastSave(As)Location includes the filename. Remove it before passing the URL to
the QFileDialog.
BUG: 416629